# flare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Flare_Progress_Report.docx  LICENSE  README.ja.md  README.md  SECURITY.md  flare-issues.xlsx  package.json
.github/workflows/: ci.yml
docs/: API.md  COMPLETENESS_REPORT.md  LEARNING_GUIDE.md  PROGRESS.md  getting-started.md
docs/api/: flare-compiler.md  flare-router.md  flare-store.md  flare-ui.md  vite-plugin-flare.md
docs/security/: SECURITY_AUDIT.md
examples/: flare.config.json  package.json
examples/spa-router/: build.js  index.html
examples/src/: index.html
examples/todo-app/: build.js  index.html
flare-cli/: .npmignore  index.d.ts  package.json
flare-cli/lib/: compiler.js  messages.js
flare-cli/test/: cli.test.js  compiler.test.js  e2e.test.js
flare-compiler-rust/: Cargo.toml  README.md
flare-compiler-rust/src/: ast.rs  checker.rs  codegen.rs  lib.rs  main.rs  parser.rs  splitter.rs  types.rs
flare-router/: index.d.ts  index.js  index.mjs  package.json
flare-router/test/: router.test.js
flare-store/: .npmignore  index.d.ts  index.js  index.mjs  package.json
flare-store/test/: store.test.js
flare-ui/: .npmignore  build.js  index.d.ts  package.json
flare-ui/components/: fl-alert.flare  fl-badge.flare  fl-button.flare  fl-card.flare  fl-dialog.flare  fl-input.flare  fl-spinner.flare  fl-tabs.flare  fl-toggle.flare
flare-vscode/: README.md  extension.js  language-configuration.json  package.json
vite-plugin-flare/: index.d.ts  index.js  index.mjs  package.json
(+16 files in other folders)
