[package]
name = "flare-compiler"
version = "0.1.0"
edition = "2021"
description = "Flare template language compiler - compiles .flare files to native Web Components"
license = "MIT"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "flarec"
path = "src/main.rs"

[lib]
name = "flare_compiler"
path = "src/lib.rs"
